# speakyfi-windows

./: .gitignore
.github/workflows/: windows.yml
docs/: testing.md  windows-local-mode-checklist.md
quality/: acceptance-checklist.json
scripts/: generate-checklist-report.mjs
src/: index.html  overlay.css  overlay.js  settings.css  settings.html  settings.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  cloud.rs  config.rs  correction.rs  diagnostics.rs  hotkeys.rs  lib.rs  main.rs  output.rs  transcriber.rs
